Removed keytar package and fixed scrollbars

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -35,7 +35,7 @@ body {
         .resultArea {
             padding: 8px;
             font-size: 15px;
-            overflow: scroll;
+            overflow: auto;
         }
         .databaseList,
         .collectionList {
